Added config snippets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,13 @@
     "cSpell.words": [
         "gclon",
         "gcom",
+        "gconf",
+        "gconfl",
         "glog",
         "gmer",
         "gpul",
         "gpush",
-        "gset"
+        "gset",
+        "oneline"
     ]
 }
