--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Realease
+name: release
 
 # Controls when the workflow will run
 on:
@@ -26,11 +26,11 @@ jobs:
         uses: CEnnis91/action-ahk2exe@v1.0.0
         with:
           # The path and name of the script to compile.
-          in: source/GitSnippets.ahk
+          in: source/git-snippets.ahk
           # The path\name of the output .exe to be created. Default is the directory\base_name of the input file plus extension of .exe.
           out: build/git-snippets.exe
           # The icon file to be used.
-          icon: Icons/'Git Snippets.ico'
+          icon: icons/git-snippets.ico
           
       - name: Automatic Releases
         # You may pin to the exact commit or the version.
